<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_left_text"
            android:gravity="center"
            android:text="@string/contacto_ref"
            android:textSize="@dimen/contacto_size"/>

        <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_text"
        android:layout_marginRight="@dimen/margin_left_text"
        android:layout_marginTop="@dimen/margin_left_text"
        android:hint="@string/hint_name"
        android:inputType="text" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_text"
            android:layout_marginRight="@dimen/margin_left_text"
            android:layout_marginTop="@dimen/margin_left_text"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mensaje_contacto"
            android:layout_marginLeft="@dimen/margin_left_text"
            android:layout_marginRight="@dimen/margin_left_text"
            android:layout_marginTop="@dimen/margin_left_text"
            android:hint="@string/hint_mensaje"
            android:gravity="start"
            android:inputType="text" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_marginTop="@dimen/margin_left_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_send"/>


    </LinearLayout>


</LinearLayout>